<resources>
    <string name="lm_chat_app_name">LikeMinds</string>
    <string name="lm_chat_no_internet">No internet!</string>
    <string name="lm_chat_check_your_connection_and_try_again">Check your connection and try again.</string>
    <string name="lm_chat_not_now">Not now</string>
    <string name="lm_chat_permission_continue">Continue</string>
    <string name="lm_chat_settings">Settings</string>
    <string name="lm_chat_something_went_wrong">Something went wrong!</string>
    <string name="lm_chat_empty_api_key">Empty API Key</string>
    <string name="lm_chat_community">Community</string>
    <string name="lm_chat_access_denied">Access denied!</string>
    <string name="lm_chat_oops_you_don_t_seem_to_have_access_to_the_community">Oops! You don’t seem to have access to the community.</string>
    <string name="lm_chat_explore">Explore</string>
    <string name="lm_chat_ninety_nine_plus_chatrooms">99+ Chatrooms</string>
    <string name="lm_chat_ninety_nine_plus_new">99+ NEW</string>
    <string name="lm_chat_new_chatroom_count">%d NEW</string>
    <plurals name="lm_chat_chatrooms_count">
        <item quantity="one">%d Chatroom</item>
        <item quantity="other">%d Chatrooms</item>
    </plurals>
    <plurals name="lm_chat_participants_s">
        <item quantity="one">%d participant</item>
        <item quantity="other">%d participants</item>
    </plurals>
    <string name="lm_chat_max_two_digit_number">99+</string>
    <string name="lm_chat_you_deleted_this_message">You deleted this message.</string>
    <string name="lm_chat_your_message_was_deleted_by_cm">Your message was deleted by a community manager.</string>
    <string name="lm_chat_this_message_was_deleted">This message was deleted.</string>
    <string name="lm_chat_this_message_was_deleted_by_cm">This message was deleted by a community manager.</string>
    <string name="lm_chat_chatroom_was_deleted">This chat room was deleted</string>
    <string name="lm_chat_empty_chat_room_title">It’s time to participate</string>
    <string name="lm_chat_joined_chatrooms">Joined chat rooms</string>
    <string name="lm_chat_general_channel_name">General notifications</string>
    <string name="lm_chat_general_channel_description">All general notifications</string>
    <string name="lm_chat_new_caps">NEW</string>
    <string name="lm_chat_join">Join</string>
    <string name="lm_chat_joined">Joined</string>
    <string name="lm_chat_creator_cant_leave_message">The creator of a chatroom cannot leave the chatroom</string>
    <string name="lm_chat_pinned">Pinned</string>
    <string name="lm_chat_explore_chatroom">Explore Chatrooms</string>
    <string name="lm_chat_invalid_app_access">Invalid app access</string>
    <plurals name="lm_chat_community_manager">
        <item quantity="one">Community Manager</item>
        <item quantity="other">Community Managers</item>
    </plurals>
    <string name="lm_chat_edited">Edited</string>
    <string name="lm_chat_about_this_community">About this community:</string>
    <string name="lm_chat_reaction_red_heart">❤️</string>
    <string name="lm_chat_reaction_crying_laugh">😂</string>
    <string name="lm_chat_reaction_wow">😮</string>
    <string name="lm_chat_reaction_cry">😢</string>
    <string name="lm_chat_reaction_anger">😡</string>
    <string name="lm_chat_reaction_like">👍</string>
    <string name="lm_chat_long_press_to_react">Press and hold to react.</string>
    <string name="lm_chat_tap_and_hold_to_record">Tap and Hold to record a voice message.</string>
    <string name="lm_chat_reply">Reply</string>
    <string name="lm_chat_voice_note">Voice Note</string>
    <string name="lm_chat_type_your_response">Type your response</string>
    <string name="lm_chat_the_community_managers_have_restricted_you_from_responding_here">The community managers have restricted you from responding here.</string>
    <string name="lm_chat_gifs">GIFs</string>
    <string name="lm_chat_slide_up_to_record_without_holding">Slide up to record without holding</string>
    <string name="lm_chat_slide_to_cancel">Slide to cancel</string>
    <string name="lm_chat_camera">Camera</string>
    <string name="lm_chat_gallery">Gallery</string>
    <string name="lm_chat_document">Document</string>
    <string name="lm_chat_poll">Poll</string>
    <string name="lm_chat_audio">Audio</string>
    <string name="lm_chat_custom_widget_a">Custom Widget A</string>
    <string name="lm_chat_custom_widget_b">Custom Widget B</string>
    <string name="lm_chat_chatroom_not_joined_yet">chatroom not joined yet</string>
    <string name="lm_chat_no_results_found">No results found</string>
    <string name="lm_chat_audio_is_played">Audio is being played in chatroom</string>
    <string name="lm_chat_start_duration">00:00</string>
    <string name="lm_chat_image_not_found">Image not found</string>
    <string name="lm_chat_direct_messaging_member_left">The member is no longer a part of the community. Messaging is disabled.</string>
    <string name="lm_chat_only_community_managers_can_respond">Only Community Managers can respond here.</string>
    <string name="lm_chat_secret_chatroom_restricted_message">Join this chat room to participate in this chat room.</string>
    <string name="lm_chat_direct_messages_community_manager_removed">This member has been removed as community manager. Messaging is disabled.</string>
    <string name="lm_chat_large_file_select_error_message">Files below 100 KB and above 100 MB are not allowed</string>
    <string name="lm_chat_photo_saved_to_gallery">Photo saved to gallery</string>
    <string name="lm_chat_video_saved_to_gallery">Video saved to gallery</string>
    <string name="lm_chat_saved_to_gallery">Saved to gallery</string>
    <string name="lm_chat_download_in_progress">Download in progress</string>
    <string name="lm_chat_image_download">Image download</string>
    <string name="lm_chat_video_download">Video download</string>
    <string name="lm_chat_media_download">Media Download</string>
    <string name="lm_chat_unknown_error_occurred">Unknown error occurred</string>
    <string name="lm_chat_connection_timed_out">Connection timed out</string>
    <string name="lm_chat_failed_to_connect">Failed to connect</string>
    <string name="lm_chat_download_failed">Download failed</string>
    <string name="lm_chat_download_completed">Download complete</string>
    <string name="lm_chat_browse_other_docs">Browse other docs…</string>
    <string name="lm_chat_add_message">Add message…</string>
    <string name="lm_chat_pdf">PDF</string>
    <string name="lm_chat_action_search">Search</string>
    <string name="lm_chat_search_hint_text">Search…</string>
    <string name="lm_chat_ok">OK</string>
    <string name="lm_chat_sort">Sort</string>
    <string name="lm_chat_select_multiple">Select multiple</string>
    <string name="lm_chat_documents">Documents</string>
    <string name="lm_chat_placeholder_pages">%d Pages</string>
    <string name="lm_chat_cancel">Cancel</string>
    <string name="lm_chat_done">Done</string>
    <string name="lm_chat_media_is_downloading">Media is downloading. Check notification for progress</string>
    <string name="lm_chat_downloading_video">Downloading video</string>
    <string name="lm_chat_no_audio_files">Device doesn\'t contain any audio file.</string>
    <string name="lm_chat_music">Audio</string>
    <string name="lm_chat_tap_to_select">Tap to select</string>
    <string name="lm_chat_sort_by_name">Sort by name</string>
    <string name="lm_chat_sort_by_date">Sort by date</string>
    <string name="lm_chat_save_to_gallery">Save to gallery</string>
    <string name="lm_chat_retry">Retry</string>
    <string name="lm_chat_gif">GIF</string>
    <string name="lm_chat_stay_joined">Stay Joined</string>
    <string name="lm_chat_chat_room_auto_joined_message">You were tagged and added as a participant here. As a result this chatroom got added in your joined chat rooms.</string>
    <string name="lm_chat_chat_room_auto_joined">Chat room auto joined</string>
    <string name="lm_chat_leave">Leave</string>
    <string name="lm_chat_join_chatroom_message">Track this conversation and\nparticipate by joining this chatroom.</string>
    <string name="lm_chat_join_small">Join</string>
    <string name="lm_chat_chat_room_created">Chat room created.</string>
    <string name="lm_chat_share_button">Share</string>
    <string name="lm_chat_add_participants">Add Participants</string>
    <string name="lm_chat_chat_room_created_info">Although this chat room is open and discoverable\nto all community members, you can choose to add\nthem yourself.</string>
    <string name="lm_chat_uploading_progress_placeholder">%s / %s</string>
    <string name="lm_chat_link">Link</string>
    <string name="lm_chat_tag_button_text">Tag ‘@’</string>
    <string name="lm_chat_added_to_your_joined_chat_rooms">Added to your joined chat rooms</string>
    <string name="lm_chat_removed_from_your_joined_chat_rooms">Removed from your joined chat rooms</string>
    <string name="lm_chat_you_are_joining_this_chat_room">You are joining this chat room</string>
    <string name="lm_chat_copy">Copy</string>
    <string name="lm_chat_edit">Edit</string>
    <string name="lm_chat_delete">Delete</string>
    <string name="lm_chat_set_as_current_topic">Set as current topic</string>
    <string name="lm_chat_report_message">Report Message</string>
    <string name="lm_chat_send_again">Send Again</string>
    <string name="lm_chat_message_copied">Message copied</string>
    <string name="lm_chat_messages_copied">Messages copied</string>
    <string name="lm_chat_delete_message">Delete Message?</string>
    <string name="lm_chat_topic_delete_single_messages">Are you sure you want to delete this message? This message has been set as current topic of this chat room.</string>
    <string name="lm_chat_topic_delete_multiple_messages">Are you sure you want to delete these messages? One of the messages have been set as current topic of this chat room.</string>
    <string name="lm_chat_delete_single_message">Are you sure you want to delete this message? This action can not be reversed.</string>
    <string name="lm_chat_delete_multiple_message">Are you sure you want to delete these messages? This action can not be reversed.</string>
    <string name="lm_chat_current_topic_text">Current Topic</string>
    <string name="lm_chat_view_participants">View participants</string>
    <string name="lm_chat_invite_small">Invite</string>
    <string name="lm_chat_add_all_member">Add all member</string>
    <string name="lm_chat_join_chatroom">Join chatroom</string>
    <string name="lm_chat_view_profile">View Profile</string>
    <string name="lm_chat_view_community">View community</string>
    <string name="lm_chat_mute_notifications">Mute notifications</string>
    <string name="lm_chat_leave_chatroom">Leave chatroom</string>
    <string name="lm_chat_report">Report</string>
    <string name="lm_chat_share_chatroom">Share Chatroom</string>
    <string name="lm_chat_leave_chat_room">Leave chat room?</string>
    <string name="lm_chat_are_you_sure_you_want_to_leave_this_chat_room">Are you sure you want to leave this chat room?</string>
    <string name="lm_chat_you_have_left_the_chat_room">You have left the chat room.</string>
    <string name="lm_chat_message_deleted">Message deleted</string>
    <string name="lm_chat_send_dm_request">Send DM request?</string>
    <string name="lm_chat_send_dm_request_info">A direct messaging request would be sent to this member. You would be able to send further messages only once your request is approved.</string>
    <string name="lm_chat_link_continue">Continue</string>
    <string name="lm_chat_block">Block</string>
    <string name="lm_chat_join_this_chatroom_question">Join this chatroom?</string>
    <string name="lm_chat_join_this_chatroom_description">You are about to join this secret chatroom.</string>
    <string name="lm_chat_confirm">Confirm</string>
</resources>