<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lm_chat_white"
        android:padding="6dp">

        <com.likeminds.chatmm.branding.customview.LikeMindsTextView
            android:id="@+id/tv_leave_chatroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/lm_chat_leave_chat_room"
            android:textColor="@color/lm_chat_black_87"
            android:textSize="16sp"
            app:fontType="medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.likeminds.chatmm.branding.customview.LikeMindsTextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:lineSpacingExtra="7sp"
            android:text="@string/lm_chat_are_you_sure_you_want_to_leave_this_chat_room"
            android:textColor="@color/lm_chat_black_54"
            android:textSize="15sp"
            android:textStyle="normal"
            app:fontType="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_leave_chatroom" />

        <com.likeminds.chatmm.branding.customview.LikeMindsTextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:paddingHorizontal="22dp"
            android:paddingVertical="10dp"
            android:text="@string/lm_chat_leave"
            android:textAllCaps="true"
            android:textColor="@color/lm_chat_teal_two"
            android:textSize="13sp"
            android:textStyle="normal"
            app:fontType="medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:textType="special"
            tools:ignore="UnusedAttribute" />

        <com.likeminds.chatmm.branding.customview.LikeMindsTextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:paddingHorizontal="22dp"
            android:paddingVertical="10dp"
            android:text="@string/lm_chat_cancel"
            android:textAllCaps="true"
            android:textColor="@color/lm_chat_black_40"
            android:textSize="13sp"
            android:textStyle="normal"
            app:fontType="medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_positive"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>