<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="buttonColor"
            type="int" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lm_chat_roboto_bold"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/lm_chat_join_this_chatroom_question"
                    android:textColor="#0F1E3D"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_chatroom_invite_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lm_chat_roboto_regular"
                    android:lineSpacingExtra="7sp"
                    android:textColor="#0F1E3D"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:fontType="regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="@string/lm_chat_join_this_chatroom_description" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="@font/lm_chat_roboto_medium"
                    android:letterSpacing="0.04"
                    android:padding="12dp"
                    android:text="@string/lm_chat_cancel"
                    android:textAllCaps="true"
                    android:textColor="@{buttonColor}"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_confirm"
                    app:layout_constraintTop_toBottomOf="@id/tv_chatroom_invite_description" />

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="@font/lm_chat_roboto_medium"
                    android:letterSpacing="0.04"
                    android:padding="12dp"
                    android:text="@string/lm_chat_confirm"
                    android:textAllCaps="true"
                    android:textColor="@{buttonColor}"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_chatroom_invite_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>